[project]
name = "embeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "marimo>=0.13.0",
    "microsoft-python-type-stubs",
    "transformers>=4.50.1",
    "nbformat>=5.10.4",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
]

[tool.uv.sources]
microsoft-python-type-stubs = { git = "https://github.com/microsoft/python-type-stubs" }

[tool.basedpyright]
typeCheckingMode = "standard"
